fix: aligned tooltips with numerical rows component

--- a/src/NumericalRow/NumericalRows.scss
+++ b/src/NumericalRow/NumericalRows.scss
@@ -7,6 +7,10 @@
     margin-bottom: 8px;
   }
 
+  .Tooltip {
+    display: flex;
+  }
+
   &--error {
     p, path {
       fill: $red500;
